--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "core-js": "^3.6.5",
     "postcss": "^7.0.35",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuelidate": "^0.7.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.1.0",
