--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "axios": "^0.21.1",
     "vue": "^2.5.2",
     "vue-carousel": "^0.18.0",
+    "vue-loading-overlay": "^3.4.2",
     "vue-router": "^3.0.1",
-    "vuelidate": "^0.7.6"
+    "vuelidate": "^0.7.6",
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.1.2",
