--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-carousel": "^0.18.0",
+    "vue-feedback-reaction": "^1.2.0",
     "vue-router": "^3.2.0",
     "vuelidate": "^0.7.6",
     "vuex": "^3.4.0",
