--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "vue-clickaway": "^2.2.2",
     "vue-feedback-reaction": "^1.2.0",
     "vue-router": "^3.2.0",
+    "vue2-dropzone": "^3.6.0",
     "vuelidate": "^0.7.6",
     "vuex": "^3.4.0",
     "vuex-persistedstate": "^4.0.0-beta.3"
