--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,9 @@
     "vue": "^2.6.11",
     "vue-carousel": "^0.18.0",
     "vue-clickaway": "^2.2.2",
+    "vue-croppie": "^2.0.2",
     "vue-feedback-reaction": "^1.2.0",
+    "vue-form-wizard": "^0.8.4",
     "vue-router": "^3.2.0",
     "vue2-dropzone": "^3.6.0",
     "vuelidate": "^0.7.6",
