--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "vue-feedback-reaction": "^1.2.0",
     "vue-form-wizard": "^0.8.4",
     "vue-router": "^3.2.0",
+    "vue-select": "^3.11.2",
     "vue2-dropzone": "^3.6.0",
     "vuelidate": "^0.7.6",
     "vuex": "^3.4.0",
