--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "epic-spinners": "^1.1.0",
     "postcss-loader": "^3.0.0",
     "pusher-js": "^7.0.3",
     "raw-loader": "^0.5.1",
