--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "epic-spinners": "^1.1.0",
+    "moment": "^2.29.1",
     "postcss-loader": "^3.0.0",
     "pusher-js": "^7.0.3",
     "raw-loader": "^0.5.1",
@@ -36,6 +37,7 @@
     "vue-notification-bell": "^0.8.14",
     "vue-router": "^3.2.0",
     "vue-select": "^3.11.2",
+    "vue-window-size": "^0.6.2",
     "vue2-dropzone": "^3.6.0",
     "vuelidate": "^0.7.6",
     "vuex": "^3.4.0",
