--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,9 @@
     "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "dom-to-image": "^2.6.0",
     "epic-spinners": "^1.1.0",
+    "html-to-image": "^1.6.2",
     "moment": "^2.29.1",
     "postcss-loader": "^3.0.0",
     "pusher-js": "^7.0.3",
