--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "vue-croppie": "^2.0.2",
     "vue-feedback-reaction": "^1.2.0",
     "vue-form-wizard": "^0.8.4",
+    "vue-infinite-loading": "^2.4.5",
     "vue-native-websocket": "^2.0.14",
     "vue-notification-bell": "^0.8.14",
     "vue-router": "^3.2.0",
