--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "pusher-js": "^7.0.3",
     "raw-loader": "^0.5.1",
     "vue": "^2.6.11",
+    "vue-advanced-chat": "^0.8.5",
     "vue-carousel": "^0.18.0",
     "vue-clickaway": "^2.2.2",
     "vue-croppie": "^2.0.2",
