--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@vue/cli-plugin-pwa": "^4.5.13",
     "animate.css": "^4.1.1",
     "axios": "^0.21.1",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "dom-to-image": "^2.6.0",
     "epic-spinners": "^1.1.0",
@@ -33,6 +34,7 @@
     "vue": "^2.6.11",
     "vue-advanced-chat": "^0.8.5",
     "vue-carousel": "^0.18.0",
+    "vue-chartjs": "^3.5.1",
     "vue-clickaway": "^2.2.2",
     "vue-croppie": "^2.0.2",
     "vue-feedback-reaction": "^1.2.0",
